# geo_roughness

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sample.glb  sample_1.glb
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  ColorMapLegend.jsx  ErrorBoundary.jsx  MaterialPanel.jsx  RoughnessLegend.jsx  ThreeViewer.jsx  index.css
geo_roughness/: api.py  cli.py
geo_roughness/io/: glb_loader.py
geo_roughness/materials/: __init__.py  alsi10mg.py
geo_roughness/roughness/: orientation.py  roughness.py  surface.py
geo_roughness/visualization/: mesh_plot.py  vtk_viewer.py
scripts/: visualize.py
